# dsp-pipeline

./: CMakeLists.txt  README.md
include/: anomaly.h  fft.h  filters.h  pipeline.h
src/: anomaly.cpp  fft.cpp  main.cpp
tests/: test_dsp.cpp
